manifests/dev/go-sample-api/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-20240206
spec:
  selector:
    matchLabels:
      app: api-20240206
  replicas: 1
  template:
    metadata:
      labels:
        app: api-20240206
    spec:
      imagePullSecrets:
        - name: artifact-registry
      containers:
        - name: api-20240206
          image: "asia-northeast1-docker.pkg.dev/node-api-400701/node-api/go122-api:3f34c70e9e9fde81888f91d6a902544d29ce514c"
          ports:
            - containerPort: 8080
